--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <h1>Cliquez sur le lien pour télécharger le fichier</h1>
 
     <a href="f.jpg" download="f.jpg">
-        Télécharger le fichier 
+        Télécharger l'image 
     </a>
-
+    <br>
+    <a href="bint chalabiya bis.mp4" download="bint chalabiya bis.mp4">
+        Télécharger la video
+    </a>
 </body>
 </html>
