--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Téléchargement de fichier</title>
+    <title>Vidéo à télécharger</title>
 </head>
 <body>
 
-    <h1>Cliquez sur le lien pour télécharger le fichier</h1>
+    <h1>Vidéo à télécharger</h1>
 
-    <a href="f.jpg" download="f.jpg">
-        Télécharger l'image 
-    </a>
+    <!-- Lien pour afficher la vidéo -->
+    <iframe width="560" height="315" src="https://drive.google.com/file/d/1ZaoY8ceSubI4ir7B_Llnn6N4Zcq8VzfL/preview" frameborder="0" allowfullscreen></iframe>
+
     <br>
-    <a href="bint chalabiya bis.mp4" download="bint chalabiya bis.mp4">
-        Télécharger la video
-    </a>
+
+    <!-- Lien pour télécharger la vidéo -->
+    <a href="https://drive.google.com/uc?export=download&id=1ZaoY8ceSubI4ir7B_Llnn6N4Zcq8VzfL">Télécharger la vidéo</a>
+
 </body>
 </html>
